Tiny alignment fix for mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -693,4 +693,15 @@ a {
     font-size: 18px;
     max-width: 100px;
   }
+
+  .attempts-counter {
+    text-align: center;
+    margin: auto;
+  }
+
+  .AttributeHidden {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
